crates/index-scheduler/src/scheduler/snapshots/test_document_addition.rs/test_document_addition_with_set_and_null_primary_key_inference_works/documents.snap
---
source: crates/index-scheduler/src/scheduler/test_document_addition.rs
snapshot_kind: text
---
[
  {
    "doggoid": 0,
    "doggo": "jean bob"
  },
  {
    "doggoid": 2,
    "doggo": "jean bob"
  },
  {
    "doggoid": 3,
    "doggo": "jean bob"
  },
  {
    "doggoid": 4,
    "doggo": "jean bob"
  },
  {
    "doggoid": 5,
    "doggo": "jean bob"
  }
]
